# python

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: survey.md
.github/workflows/: code-review.yml  deploy-document.yml  lint.yml  pytest.yml  python-app.yml
docs/: make.bat
docs/source/: conf.py  index.rst
docs/source/API/: API.rst
docs/source/Development/: Development.rst
docs/source/Installation/: Installation.rst
docs/source/Quickstart/: Quickstart.rst
docs/source/Version/: Version.rst
src/python_template/: __init__.py
