[tool.poetry]
name = "python-template"
version = "0.0.2"
description = ""
authors = ["Kodai YAMASHITA <nglcobdai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.4"
pydantic-settings = "^2.4.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
pytest = "^8.3.2"
sphinx = "^8.1.3"
icecream = "^2.1.3"
furo = "^2024.8.6"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
